Fixed general layout issues on all pages

--- a/Other/iCY/style/common.css
+++ b/Other/iCY/style/common.css
@@ -13,7 +13,7 @@ body, html {
 	font-size:18pt;
 	height: 100%;
 	width: 100%;
-	text-align: center;
+	/*text-align: center;*/
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
 }
 
@@ -21,12 +21,13 @@ body, html {
 	text-align: left;
 	margin-left: 3%;
 	margin-right: 3%;
+	margin-top: -2%;
 }
 
-/*.centreMargin{
-	margin-right:20%;
-	margin-left: 20%;
-}*/
+.centreMargin{
+	margin-right:10%;
+	margin-left: 10%;
+}
 
 .cancelBtn{
 	position: fixed;
@@ -65,6 +66,8 @@ body, html {
 	margin-top: 7px;
 	margin-bottom: 7px;
 	font-size: 18pt; 
+	margin-left: 3%;
+	margin-right: 3%;
 }
 
 .modalDoneBtn{
@@ -236,6 +239,9 @@ body, html {
 	text-decoration:none;
 	text-shadow:1px 1px 0px #fa4949;
 	width: 75%;
+	position: fixed;
+	margin-left: 12.5%;
+	margin-right: 12.5%;
 }.redBtn:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ff0000), color-stop(1, #f79e9e) );
 	background:-moz-linear-gradient( center top, #ff0000 5%, #f79e9e 100% );
@@ -252,9 +258,11 @@ body, html {
     font-size: 30pt;
     line-height: 150px;
     font-weight: 700;
-    width: 600px;
-    margin-right: auto;
-    margin-left: auto;
+    width: 50%;
+    position: fixed;
+    margin-right: 25%;
+    margin-left: 25%;
+    margin-top: 45%;
 }
 
 #advice_9point
@@ -269,4 +277,14 @@ body, html {
 
 #popupOptionsForPharmacy
 {
+}
+
+.checkboxSqueeze{
+	margin-top: -3%;
+	margin-bottom: -2%;
+}
+
+.titleSqueeze {
+	margin-top: -1%;
+	/*margin-bottom: -2%;*/
 }
